# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  06 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Write out HOSTUSE settings from arch/*.py to make.conf as well as any USE
  flags defined in the spec file.

  06 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> arch/ppc64.py:
  Added a patch from Markus Rothe <corsair@gentoo.org> to add power6 and cell
  subarches to ppc64 for bug #208860 and removing redundant CXXFLAGS settings,
  since catalyst sets CXXFLAGS=CFLAGS by default.

  06 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage1/livecd-stage1-chroot.sh, targets/support/kmerge.sh:
  Added clst_HOSTUSE to livecd-stage1 and livecd-stage2 package builds.

  06 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> arch/x86.py:
  Added prescott to the subarches for x86.

  06 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/netboot2_target.py, targets/support/kmerge.sh:
  Add patch to enabled netboot2/linuxrc and automatically add path for
  initramfs overlay to genkernel commandline. Thanks to Justin Bronder
  <jsbronder@gentoo.org> in bug #208106

  06 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/netboot2_target.py:
  Allow root_overlay in netboot2 target for bug #208106.

  04 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py, modules/livecd_stage1_target.py,
  targets/stage1/stage1-chroot.sh, targets/support/chroot-functions.sh:
  Added USE=bindist automatically to everything that inherits set_use from
  generic_stage_target, added USE=bindist to livecd_stage1_target, added
  USE=bindist to emerge run for stage1, and did some minor cleanup in
  get_libdir in chroot-functions.

  03 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/bootloader-setup.sh:
  Add splashimage= line to grub.conf if /boot/grub/splash.xpm.gz exists

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>