@@ -39,12 +39,6 @@ class arch_i586(generic_x86):
 		self.settings["CFLAGS"]="-O2 -march=i586 -pipe"
 		self.settings["CHOST"]="i586-pc-linux-gnu"
 
-class arch_pentium_mmx(arch_i586):
-	def __init__(self,myspec):
-		arch_i586.__init__(self,myspec)
-		self.settings["CFLAGS"]="-O2 -march=pentium-mmx -pipe"
-		self.settings["HOSTUSE"]=["mmx"]
-	
 class arch_i686(generic_x86):
 	def __init__(self,myspec):
 		generic_x86.__init__(self,myspec)
@@ -59,51 +53,58 @@ class arch_athlon(generic_x86):
 		self.settings["HOSTUSE"]=["mmx","3dnow"]
 
 class arch_athlon_xp(generic_x86):
-	# This handles XP and MP processors
 	def __init__(self,myspec):
 		generic_x86.__init__(self,myspec)
 		self.settings["CFLAGS"]="-O2 -march=athlon-xp -pipe"
 		self.settings["CHOST"]="i686-pc-linux-gnu"
 		self.settings["HOSTUSE"]=["mmx","3dnow","sse"]
 
+class arch_pentium_mmx(arch_i586):
+	def __init__(self,myspec):
+		arch_i586.__init__(self,myspec)
+		self.settings["CFLAGS"]="-O2 -march=pentium-mmx -pipe"
+		self.settings["HOSTUSE"]=["mmx"]
+	
+class arch_pentium2(generic_x86):
+	def __init__(self,myspec):
+		arch_i686.__init__(self,myspec)
+		self.settings["CFLAGS"]="-O2 -march=pentium2 -pipe"
+		self.settings["HOSTUSE"]=["mmx"]
+
 class arch_pentium3(generic_x86):
 	def __init__(self,myspec):
-		generic_x86.__init__(self,myspec)
+		arch_i686.__init__(self,myspec)
 		self.settings["CFLAGS"]="-O2 -march=pentium3 -pipe"
-		self.settings["CHOST"]="i686-pc-linux-gnu"
 		self.settings["HOSTUSE"]=["mmx","sse"]
 
 class arch_pentium4(generic_x86):
 	def __init__(self,myspec):
-		generic_x86.__init__(self,myspec)
+		arch_i686.__init__(self,myspec)
 		self.settings["CFLAGS"]="-O2 -march=pentium4 -pipe"
-		self.settings["CHOST"]="i686-pc-linux-gnu"
 		self.settings["HOSTUSE"]=["mmx","sse"]
 
 class arch_prescott(generic_x86):
 	def __init__(self,myspec):
-		generic_x86.__init__(self,myspec)
+		arch_i686.__init__(self,myspec)
 		self.settings["CFLAGS"]="-O2 -march=prescott -pipe"
-		self.settings["CHOST"]="i686-pc-linux-gnu"
 		self.settings["HOSTUSE"]=["mmx","sse","sse2"]
-
-#class arch_nocona(generic_x86):
-#	def __init__(self,myspec):
-#		generic_x86.__init__(self,myspec)
-#		self.settings["CFLAGS"]="-O2 -march=nocona -pipe"
-#		self.settings["CHOST"]="i686-pc-linux-gnu"
-#		self.settings["HOSTUSE"]=["mmx","sse","sse2"]
-
-#class arch_core2(generic_x86):
-#	def __init__(self,myspec):
-#		generic_x86.__init__(self,myspec)
-#		self.settings["CFLAGS"]="-O2 -march=core2 -pipe"
-#		self.settings["CHOST"]="i686-pc-linux-gnu"
-#		self.settings["HOSTUSE"]=["mmx","sse","sse2"]
 
 def register():
 	"Inform main catalyst program of the contents of this plugin."
-	return ({"pentium4":arch_pentium4,"x86":arch_x86,"i386":arch_i386,"i486":arch_i486,"i586":arch_i586,"i686":arch_i686,"athlon":arch_athlon,
-	"athlon-xp":arch_athlon_xp,"athlon-mp":arch_athlon_xp,"pentium3":arch_pentium3,"pentium-mmx":arch_pentium_mmx,"prescott":arch_prescott},
+	return ({
+		"x86"			: arch_x86,
+		"i386"			: arch_i386,
+		"i486"			: arch_i486,
+		"i586"			: arch_i586,
+		"i686"			: arch_i686,
+		"athlon"		: arch_athlon,
+		"athlon-xp"		: arch_athlon_xp,
+		"athlon-mp"		: arch_athlon_xp,
+		"pentium-mmx"		: arch_pentium_mmx,
+		"pentium2"		: arch_pentium2,
+		"pentium3"		: arch_pentium3,
+		"pentium4"		: arch_pentium4,
+		"prescott"		: arch_prescott
+	},
 	('i386', 'i486', 'i586', 'i686'))
 
